2008-11-02  Dan Williams  <dcbw@redhat.com>

	* Tag 0.7.0-rc1

2008-11-02  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (find_active_device): return the active connection object instead of
			just the active connection's specific object
		- (applet_settings_new_secrets_requested_cb): pass the active connection
			to the device subclasses

	* src/applet-device-wired.c
	  src/applet-device-wifi.c
	  src/applet-device-gsm.c
	  src/applet-device-cdma.c
		- Attach any secrets dialogs to the active connection object, such that
			when the active connection object goes away the dialog also gets
			closed

2008-10-31  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/nma-gconf-connection.c
		- (update): actually save private values like cert and key paths

	* src/connection-editor/nm-connection-list.c
		- (add_connection): fill certificate and private key items before adding
			so that cert data actually gets to the system settings service
		- (update_connection): copy private values before trying to update the
			connection so that they actually get saved

2008-10-31  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- (nm_gconf_copy_private_connection_values): copy private values (like
			certificate paths and such) between connections
		- (nm_gconf_connection_duplicate): use nm_gconf_copy_private_connection_values()

	* src/connection-editor/nm-connection-list.c
		- (update_connection): make sure to copy private values when updating
			the connection

2008-10-30  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
	  src/applet-dialogs.c
	  src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-upgrade.c
	  src/utils/utils.c
	  src/wireless-security/eap-method-leap.c
	  src/wireless-security/eap-method-peap.c
	  src/wireless-security/eap-method-simple.c
	  src/wireless-security/eap-method-tls.c
	  src/wireless-security/eap-method-ttls.c