@@ -1,3 +1,9 @@
+2008-11-03  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/page-ppp.c
+		- (use_mppe_toggled_cb, populate_ui): ensure changes get saved
+			(bgo #559077)
+
 2008-11-02  Dan Williams  <dcbw@redhat.com>
 
 	* Tag 0.7.0-rc1
